// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarHeader renders with a title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    UST A TITLE
  </MenuHeader>
</MenuItem>
`;

exports[`SideBarHeader renders with an empty title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders without title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;
